<resources>
    <string name="app_name">Student_Housing</string>
    <string name="login">login</string>
    <string name="create_account">create_account</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="log_in">Log_in</string>
    <string name="student_housing">Student_housing</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="email_address">Email address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="signup">SignUp</string>
    <string name="sign_up">sign_up</string>
    <string name="find_the_perfect_residency">find_the_perfect_residency</string>
    <string name="todo">todo_</string>
    <string name="discover_the_best_residency_for_you">Discover the best residency for you</string>
    <string name="suggested_for_you">suggested_for_you</string>
    <string name="on_cumpus">on cumpus</string>
    <string name="off_cumpus">off cumpus</string>
    <string name="todo__">todo__</string>
    <string name="corlo_court_residency">Corlo Court Residency</string>
    <string name="steve_biko_residency">steve biko residency</string>
    <string name="ayar_rock_residency">ayar rock residency</string>
    <string name="find_the_perfect_residency_">Find the perfect residency</string>
    <string name="textview">textview</string>
    <string name="corlo_court_residency_">Corlo Court Residency</string>
    <string name="durban_musgrave_heswall_road">durban musgrave heswall road</string>
    <string name="corlo_court_residence_is_situated_in_durban_musgrave_area_specifically_on_hasswall_road_as_an_on_campus_residence_it_provides_a_secure_tranquil_and_conducive_environment_for_students_catering_to_a_diverse_student_population_it_offers_a_serene_atmosphere_ideal_for_those_seeking_a_quiet_living_space_within_the_campus_grounds">corlo court residence is situated in durban musgrave area specifically on hasswall road as an on campus residence it provides a secure tranquil and conducive environment for students catering to a diverse student population it offers a serene atmosphere ideal for those seeking a quiet living space within the campus grounds</string>
    <string name="bedroom">bedroom</string>
    <string name="bathroom">bathroom</string>
    <string name="virtual_tour">virtual tour</string>
    <string name="R3700_00">R3700_00</string>
    <string name="per_month_with_tax">per month with tax</string>
    <string name="apply_now">apply now</string>
    <string name="student_housing_">Student Housing</string>
    <string name="name_">Name:</string>
    <string name="enter_name">Enter name</string>
    <string name="surname_">Surname:</string>
    <string name="enter_surname">Enter surname</string>
    <string name="age">Age:</string>
    <string name="enter_age">Enter age</string>
    <string name="contact">Contact:</string>
    <string name="enter_contact">Enter contact</string>
    <string name="email">Email:</string>
    <string name="enter_email">Enter email</string>
    <string name="course">Course:</string>
    <string name="enter_course">Enter course</string>
    <string name="faculty">Faculty:</string>
    <string name="disability">Disability:</string>
    <string name="enter_disability">Enter disability</string>
    <string name="gender">Gender:</string>
    <string name="full_time_part_time">Full Time/Part Time:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="student_profile">Student Profile</string>
    <string name="faculty_">faculty</string>
    <string name="next">Next</string>
    <string name="residency_profile">Residency Profile</string>
    <string name="_1_do_you_prefer_on_campus_or_off_campus_residence">1. Do you prefer on-campus or off-campus residence?</string>
    <string name="on_campus">On-campus</string>
    <string name="off_campus">Off-campus</string>
    <string name="_2_are_you_introverted_or_extroverted">2. Are you introverted or extroverted?</string>
    <string name="introverted">Introverted</string>
    <string name="extroverted">Extroverted</string>
    <string name="_3_do_you_prefer_living_in_a_quiet_or_vibrant_area">3. Do you prefer living in a quiet or vibrant area?</string>
    <string name="quiet_area">Quiet area</string>
    <string name="vibrant_area">Vibrant area</string>
    <string name="_4_are_you_a_fan_of_nightclubs">4. Are you a fan of nightclubs?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="_5_do_you_like_reading_books">5. Do you like reading books?</string>
    <string name="yes_">Yes</string>
    <string name="no_">No</string>
    <string name="_6_do_you_like_to_play_music_on_headphones_or_speakers">6. Do you like to play music on headphones or speakers?</string>
    <string name="headphones">Headphones</string>
    <string name="speakers">Speakers</string>
    <string name="_7_religion">7. Religion?</string>
    <string name="enter_your_religion">Enter your religion</string>
    <string name="_8_do_you_prefer_living_in_town_or_in_the_suburbs">8. Do you prefer living in town or in the suburbs?</string>
    <string name="town">Town</string>
    <string name="suburbs">Suburbs</string>
    <string name="submit">Submit</string>
    <string name="durban_masgrave_problem_mkhize_rd">Durban,Masgrave,Problem Mkhize Rd</string>
    <string name="disney_height_residence">Disney Height Residence</string>
    <string name="apply">Apply</string>
    <string name="todo_">TODO</string>
    <string name="_todo">TODO</string>
    <string name="winterton_residence_located_on_70_steve_biko_road_in_durban_perfect_for_introverts_this_on_campus_living_offers_tranquility_next_to_the_city_center_with_prices_starting_at_just_r3500_per_month_it_s_an_affordable_haven_for_those_valuing_privacy_and_convenience">Winterton Residence, located on 70 Steve Biko Road in Durban. Perfect for introverts, this on-campus living offers tranquility next to the city center. With prices starting at just R3500 per month, it\'s an affordable haven for those valuing privacy and convenience.</string>
    <string name="to_do">TODO</string>
    <string name="winterton">Winterton</string>
    <string name="durban_berea_72_steve_biko_rd">Durban.Berea,72 Steve Biko Rd</string>
    <string name="to__do">TODO</string>
    <string name="welcome_to_disney_heights_located_in_the_vibrant_sydenham_area_of_durban_just_off_mallison_rd_our_community_offers_a_dynamic_and_diverse_environment_perfect_for_those_seeking_a_lively_atmosphere_with_plenty_of_diversity_despite_being_slightly_removed_from_the_city_center_sydenham_maintains_its_vibrancy_while_boasting_lower_crime_rates_ensuring_a_safe_and_comfortable_living_experience_with_rental_options_starting_at_just_r4000_per_month_or_an_annual_rate_of_r45_000_disney_heights_provides_affordable_accommodation_without_compromising_on_quality_come_and_join_us_at_disney_heights_to_experience_the_best_of_both_worlds">Welcome to Disney Heights, located in the vibrant Sydenham area of Durban, just off Mallison Rd. Our community offers a dynamic and diverse environment, perfect for those seeking a lively atmosphere with plenty of diversity. Despite being slightly removed from the city center, Sydenham maintains its vibrancy while boasting lower crime rates, ensuring a safe and comfortable living experience. With rental options starting at just R4000 per month or an annual rate of R45,000, Disney Heights provides affordable accommodation without compromising on quality. Come and join us at Disney Heights to experience the best of both worlds!</string>
    <string name="disney_heights_nestled_in_durban_s_vibrant_sydenham_area_near_mallison_rd_offers_a_dynamic_living_environment_with_diverse_amenities_despite_its_location_slightly_outside_the_city_sydenham_boasts_a_vibrant_atmosphere_and_lower_crime_rates_ensuring_a_safe_and_enjoyable_experience_with_monthly_rents_starting_at_r4000_and_annual_rates_at_r45_000_disney_heights_provides_affordable_accommodation_without_compromising_quality">Disney Heights, nestled in Durban\'s vibrant Sydenham area near Mallison Rd, offers a dynamic living environment with diverse amenities. Despite its location slightly outside the city, Sydenham boasts a vibrant atmosphere and lower crime rates, ensuring a safe and enjoyable experience. With monthly rents starting at R4000 and annual rates at R45,000, Disney Heights provides affordable accommodation without compromising quality.</string>
    <string name="disney_heights_located_in_sydenham_near_mallison_rd_in_durban_offers_a_lively_living_environment_with_diverse_amenities_despite_its_slightly_suburban_location_sydenham_maintains_a_vibrant_atmosphere_with_lower_crime_rates_ensuring_safety_and_enjoyment_with_affordable_monthly_rents_starting_at_r4000_and_annual_rates_at_r45_000_disney_heights_provides_quality_accommodation">Disney Heights, located in Sydenham near Mallison Rd in Durban, offers a lively living environment with diverse amenities. Despite its slightly suburban location, Sydenham maintains a vibrant atmosphere with lower crime rates, ensuring safety and enjoyment. With affordable monthly rents starting at R4000 and annual rates at R45,000, Disney Heights provides quality accommodation.</string>
    <string name="todo___">TODO</string>
    <string name="durban_musgrave_heswall_rd">Durban_musgrave_heswall_rd</string>
    <string name="___todo">TODO</string>
    <string name="winterton_residence_located_on_70_steve_biko_road_in_durban_perfect_for_introverts_this_on_campus_living_offers_tranquility_next_to_the_city_center_with_prices_starting_at_just_r3500_per_month_it_s_an_affordable_haven_for_those_valuing_privacy_and_convenience_">Winterton Residence, located on 70 Steve Biko Road in Durban. Perfect for introverts, this on-campus living offers tranquility next to the city center. With prices starting at just R3500 per month, it\'s an affordable haven for those valuing privacy and convenience.</string>
    <string name="winterton_residence_located_on_70_steve_biko_road_in_durban_perfect_for_introverts_this_on_campus_living_offers_tranquility_next_to_the_city_center_with_prices_starting_at_just_r3500_per_month_it_s_an_affordable_haven_for_those_valuing_privacy_and_convenience___">Winterton Residence, located on 70 Steve Biko Road in Durban. Perfect for introverts, this on-campus living offers tranquility next to the city center. With prices starting at just R3500 per month, it\'s an affordable haven for those valuing privacy and convenience.</string>
    <string name="durban_berea_king_dinizulu_rd">Durban,Berea,King Dinizulu Rd</string>
    <string name="to___do">TODO</string>
    <string name="winterton_residency">Winterton Resident</string>
    <string name="durban_berea_72_steve_biko_rd_">Durban.Berea,72 Steve Biko Rd</string>
    <string name="winterton_residence_located_on_70_steve_biko_road_in_durban_perfect_for_introverts_this_on_campus_living_offers_tranquility_next_to_the_city_center_with_prices_starting_at_just_r3500_per_month_it_s_an_affordable_haven_for_those_valuing_privacy_and__convenience">Winterton Residence, located on 70 Steve Biko Road in Durban. Perfect for introverts, this on-campus living offers tranquility next to the city center. With prices starting at just R3500 per month, it\'s an affordable haven for those valuing privacy and convenience.</string>
    <string name="dut_student_housing">DUT Student Housing</string>
    <string name="todo____">TODO</string>
    <string name="sign_in">Sign_In</string>
    <string name="back">Back</string>
</resources>